[project]
name = "lada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.1.0",
    "mmengine==0.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ultralytics==8.3.203",
]
